Source/IntegrationTests/TestFiles/LitTests/LitTest/dafny0/snapshots/Inputs/Snapshots4.v1.dfy
method M()
{
  if (*)
  {
    assert 1 != 1;  // error
  }
  else
  {
    assert 0 == 0;
    assert 2 != 2;  // error
  }
}
